Initialize activeAudit state variable

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -195,6 +195,7 @@
         let currentTopTab = 'dashboard';
         let currentSideTab = 'overview';
         let clients = [];
+        let activeAudit = null; // Store currently viewed audit
 
         // =========================================================================
         // TAB CONFIGURATION
